--- a/mdptool/testdata/goldentest1.md.html
+++ b/mdptool/testdata/goldentest1.md.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title>Markdown Preview Tool</title>
-  </head><h1>Test Markdown File</h1>
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <title>Markdown Preview Tool</title>
+</head>
+<body>
+<h1>Test Markdown File</h1>
 
 <p>Just a test</p>
 
@@ -17,5 +19,6 @@
 
 <pre><code>some code
 </code></pre>
-</body>  ​
+
+</body>
 </html>
